[package]
name = "RustAuthnBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum (Webフレームワーク)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# OAuth2関連
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"

# 環境変数の読み込み
dotenv = "0.15"

# SeaORM (データベース ORM)
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }

# セッション管理（必要に応じて）
axum-sessions = { version = "0.6.1"}
cookie = "0.18"

# ロギング・エラーハンドリング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
